--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 name: "Dhf1999sd's blog"
 description: "大黄蜂的个人技术博客"
 
-avatar: https://dhf1999sd.github.io/images/avatar.png
+avatar: https://dhf1999sd.github.io/images/avatar.jpg
 favicon: https://dhf1999sd.github.io/images/favicon.ico
 
 navigation:
