--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ name: "Dhf1999sd's blog"
 description: "大黄蜂的技术博客"
 
 avatar: https://dhf1999sd.github.io/images/avatar.jpg
-favicon: https://dhf1999sd.github.io/images/favicon.ico
+favicon: https://dhf1999sd.github.io/images/flag.ico
 
 navigation:
   - name: 首页
