--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-name: "Dhf1999sd's blog"
+name: "dhf1999sd's blog"
 description: "大黄蜂的技术博客"
 
 avatar: https://dhf1999sd.github.io/images/avatar.jpg
