--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ excerpt_separator: <!-- more -->
 
 footer-links:
   email: dahaungfeng1999@qq.com
-  github: https://dhf1999sd.github.io/
+  github: dhf1999sd
   rss: # just type anything here for a working RSS icon
 
 
