--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 name: "dhf1999sd's blog"
-description: "大黄蜂的技术博客"
+description: "大黄蜂的博客"
 
 avatar: https://dhf1999sd.github.io/images/avatar.jpg
 favicon: https://dhf1999sd.github.io/images/flag.ico
